[FIX] Change `each` helpers to block form.

--- a/app/templates/components/google-map.hbs
+++ b/app/templates/components/google-map.hbs
@@ -14,12 +14,15 @@
     {{/each}}
   </ul>
   <ul>
-    {{each _polylines itemViewClass=polylineViewClass as |polyline|}}
+    {{#each _polylines itemViewClass=polylineViewClass as |polyline|}}
+    {{/each}}
   </ul>
   <ul>
-    {{each _polygons itemViewClass=polygonViewClass as |polygon|}}
+    {{#each _polygons itemViewClass=polygonViewClass as |polygon|}}
+    {{/each}}
   </ul>
   <ul>
-    {{each _circles itemViewClass=circleViewClass as |circle|}}
+    {{#each _circles itemViewClass=circleViewClass as |circle|}}
+    {{/each}}
   </ul>
 </div>
