updated to working search

--- a/app/templates/components/google-map.hbs
+++ b/app/templates/components/google-map.hbs
@@ -1,3 +1,4 @@
+<input id="map-input_{{elementId}}" class="map-controls map-input" style="display:none;" type="text" placeholder="Enter a location">
 <div class="map-canvas"></div>
 <div style="display: none;">
   <ul>
